# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "image-pyramid"
version = "0.3.1"
authors = ["jnickg <jnickg83@gmail.com>"]
edition = "2021"
description = "A small library to compute image pyramids"
documentation = "https://docs.rs/image-pyramid"
readme = "README.md"
homepage = "https://github.com/jnickg/image-pyramid"
repository = "https://github.com/jnickg/image-pyramid"
license = "GPL-3.0-only"
keywords = ["crate", "image-pyramid", "pyramid", "subsampling", "mipmap"]
categories = ["computer-vision", "algorithms", "graphics", "multimedia", "multimedia::images"]

[dependencies]
image = { version = "0.25.1", features = ["rayon"], default-features = false }
num-traits = "0.2.19"
rayon = "1.10.0"

[dev-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
image = "0.25.1"
test-case = "3.3.1"
version-sync = "0.9.5"

[badges.maintenance]
status = "actively-developed"
