# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "image-pyramid"
version = "0.5.1"
authors = ["jnickg <jnickg83@gmail.com>"]
edition = "2021"
description = "A small library to compute image pyramids"
documentation = "https://docs.rs/image-pyramid"
readme = "README.md"
homepage = "https://github.com/jnickg/image-pyramid"
repository = "https://github.com/jnickg/image-pyramid"
license = "GPL-3.0-only"
keywords = ["crate", "image-pyramid", "pyramid", "subsampling", "mipmap"]
categories = ["computer-vision", "algorithms", "graphics", "multimedia", "multimedia::images"]

[dependencies]
fft2d = { version = "0.1.1", optional = true }
image = { version = "0.25.1", default-features = false }
nalgebra = { version = "0.32.5", optional = true }
ndarray = { version = "0.15.6", optional = true }
num-traits = "0.2.19"
rayon = { version = "1.10.0", optional = true }
thiserror = "1.0.61"

[dev-dependencies]
anyhow = "1.0.86"
approx = "0.5.1"
clap = { version = "4.5.4", features = ["derive"] }
image = "0.25.1"
test-case = "3.3.1"
version-sync = "0.9.5"

[badges.maintenance]
status = "actively-developed"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[features]
default = []
steerable = ["dep:fft2d", "dep:ndarray", "dep:nalgebra"]
rayon = ["dep:rayon", "image/rayon"]

[[example]]
name = "steerable_kernels"
path = "examples/steerable_kernels.rs"
required-features = ["steerable"]

[[example]]
name = "compute_pyramid"
path = "examples/compute_pyramid.rs"
